{
    "name": "InputManager",
    "maps": [
        {
            "name": "MenuInteraction",
            "id": "4cfff686-8c73-4d85-9679-cef9965e49bb",
            "actions": [
                {
                    "name": "Pause",
                    "type": "Button",
                    "id": "f4b73eeb-22c7-4c5c-b17d-ca468977b83e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press"
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "8d07c4bd-4ef8-4fc4-86f2-06758fc07da3",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard and Mouse",
                    "action": "Pause",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "TilePlacement",
            "id": "f353c50b-9338-456f-8f81-3dab28bed78b",
            "actions": [
                {
                    "name": "MouseClick",
                    "type": "Button",
                    "id": "c023fc43-5d3d-4238-abc1-1f548f16b5e2",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press"
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "936ef65c-3f0f-4df3-9270-ef9913b5c2e8",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard and Mouse",
                    "action": "MouseClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Keyboard and Mouse",
            "bindingGroup": "Keyboard and Mouse",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                },
                {
                    "devicePath": "<Mouse>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}